@@ -8,6 +8,9 @@ New: Issue #877: Add support for VxFS filesystem statistics. Thanks to Lutz Made
 
 New: Enable AddressSanitizer for compilation if libasan.so is found. Use --without-asan to disable.
 
+New: Disable support for TLS 1.0 and 1.1 when protocol is set to 'auto' (default). You can still enable
+these protocols by setting the TLS {VERSION: <string>} statement.
+
 Fixed: Issue #872: Procmatch PID column show five digits only
 
 Fixed: MacOS: Only first 16 characters of the process name was displayed for privileged processes,
